# CECSNET

./: README.md  idea.txt
Playdate/Example/: CMakeLists.txt
Playdate/libs/: manifest.txt
Playdate/libs/share/doc/annotate/: Annotations-Overview.html  Annotations-for-Running.html  Breakpoint-Info.html  Displays.html  Errors.html  Frame-Annotations.html  GNU-Free-Documentation-License.html  Invalidation.html  Limitations.html  Migrating-to-GDB_002fMI.html  Multi_002dthreaded-Apps.html  Prompting.html  Server-Prefix.html  Source-Annotations.html  Value-Annotations.html  index.html
Playdate/libs/share/doc/cpp/: Alternatives-to-Wrapper-_0023ifndef.html  Argument-Prescan.html  C_002b_002b-Named-Operators.html  Character-sets.html  Common-Predefined-Macros.html  Computed-Includes.html  Concatenation.html  Concept-Index.html  (+70 more)
Playdate/libs/share/info/: as.info  binutils.info  cpp.info  gcc.info  gccinstall.info  gccint.info  gdb.info  gfortran.info  gprof.info  ld.info
ecsnet/: CMakeLists.txt  Makefile  compile.bat
ecsnet/include/: config.h  connection_manager.h  ecs.h  ecs_api.h  ecs_builtin.h  ecs_types.h  ecsnet.h  net.h  net_socket.h  network_architecture.h  network_sync.h  protocol_handler.h
ecsnet/include/net/: connection_manager.h  net_socket.h
ecsnet/lib/: ecsnet.def  ecsnet.lib
ecsnet/src/: connection_manager.c  ecs.c  ecs_builtin.c  example.c  main.c  net.c  net_socket.c  network_architecture.c  network_sync.c  protocol_handler.c  simple_server.c
ecsnet/src/net/: connection_manager.c  net_socket.c
ecsnet/tests/: test.c  test_ecs.c  test_ecs.h
(+2348 files in other folders)
